--- a/project/vs2008/AppUtil/AppUtil.vcproj
+++ b/project/vs2008/AppUtil/AppUtil.vcproj
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="zlibwapi.lib DTK.lib activemq-cppd.lib"
+				AdditionalDependencies="zlibwapi.lib DTK.lib activemq-cppd.lib gsoap.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="../../../public/lib/vs2008_debug"
 				GenerateDebugInformation="true"
@@ -136,7 +136,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="DTK.lib zlibwapi.lib activemq-cpp.lib"
+				AdditionalDependencies="DTK.lib zlibwapi.lib activemq-cpp.lib gsoap.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="../../../public/lib/vs2008_release"
 				GenerateDebugInformation="true"
@@ -177,27 +177,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\..\src\FireWallMgr.cpp"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\src\main.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\PortDetect.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\ThreadPool.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\WinApiWrap.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\ZipTool.cpp"
 				>
 			</File>
 		</Filter>
@@ -206,26 +186,6 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath="..\..\..\src\FireWallMgr.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\PortDetect.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\ThreadPool.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\WinApiWrap.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\..\src\ZipTools.h"
-				>
-			</File>
 		</Filter>
 		<Filter
 			Name="Resource Files"
@@ -242,6 +202,154 @@
 			</File>
 			<File
 				RelativePath="..\..\..\src\AMqWraper.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="FireWall"
+			>
+			<File
+				RelativePath="..\..\..\src\FireWallMgr.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\FireWallMgr.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="PortDetect"
+			>
+			<File
+				RelativePath="..\..\..\src\PortDetect.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\PortDetect.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\WinApiWrap.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\WinApiWrap.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="zip"
+			>
+			<File
+				RelativePath="..\..\..\src\ZipTool.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\ZipTools.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="ThreadPool"
+			>
+			<File
+				RelativePath="..\..\..\src\ThreadPool.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\ThreadPool.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="ws_serv"
+			>
+			<File
+				RelativePath="..\..\..\src\WsService.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\WsService.h"
+				>
+			</File>
+			<Filter
+				Name="include"
+				>
+				<File
+					RelativePath="..\..\..\public\include\ws\stdsoap2.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\public\include\ws\stdsoap2.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\public\include\ws\serv\testProxy.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\public\include\ws\serv\testProxy.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\public\include\ws\serv\testService.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\public\include\ws\serv\testService.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\public\include\ws\serv\testService.nsmap"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\public\include\ws\serv\testServiceC.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\public\include\ws\serv\testServiceH.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\public\include\ws\serv\testServiceStub.h"
+					>
+				</File>
+			</Filter>
+		</Filter>
+		<Filter
+			Name="ws_client"
+			>
+			<File
+				RelativePath="..\..\..\public\include\ws\client\testClientC.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\public\include\ws\client\testClientH.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\public\include\ws\client\testClientStub.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\public\include\ws\client\testClienttestServiceProxy.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\public\include\ws\client\testClienttestServiceProxy.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\public\include\ws\client\testService.nsmap"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\WsClient.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\WsClient.h"
 				>
 			</File>
 		</Filter>
